# gdrive-mcp-server

./: README.md  pyproject.toml  server.py
gdrive_mcp_server/: server.py
