[project]
name = "gdrive-mcp-server"
version = "0.1.0"
description = "MCP server for Google Drive API v3"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
auth = ["google-auth-oauthlib>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
